--- a/app/globals.css
+++ b/app/globals.css
@@ -60,3 +60,61 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+.cool_text_1 {
+  --bg-size: 400%;
+  --color-one: hsl(272, 96%, 64%);
+  --color-two: hsl(310, 95%, 55%);
+  font-family: sans-serif;
+  background: linear-gradient(90deg,
+      var(--color-one),
+      var(--color-two),
+      var(--color-one)) 0 0 / var(--bg-size) 100%;
+  color: transparent;
+  background-clip: text;
+  animation: move-bg 8s linear infinite;
+}
+
+
+.cool_text_2 {
+  --bg-size: 400%;
+  --color-one: hsl(103, 96%, 64%);
+  --color-two: hsl(183, 95%, 55%);
+  font-family: sans-serif;
+  background: linear-gradient(90deg,
+      var(--color-one),
+      var(--color-two),
+      var(--color-one)) 0 0 / var(--bg-size) 100%;
+  color: transparent;
+  background-clip: text;
+  animation: move-bg 8s linear infinite;
+}
+
+
+
+
+.cool_text_3 {
+  --bg-size: 400%;
+  --color-one: hsl(23, 89%, 53%);
+  --color-two: hsl(55, 95%, 55%);
+  font-family: sans-serif;
+  background: linear-gradient(90deg,
+      var(--color-one),
+      var(--color-two),
+      var(--color-one)) 0 0 / var(--bg-size) 100%;
+  color: transparent;
+  background-clip: text;
+  animation: move-bg 8s linear infinite;
+}
+
+
+
+
+
+
+@keyframes move-bg {
+  to {
+    background-position: var(--bg-size) 0;
+  }
+}
